# adkProjectUd

./: .gitignore  README.md
1youtube_short_script_assistant/youtube_short_script_assistant/: agent.py  main.py  pyproject.toml
1youtube_short_script_assistant/youtube_short_script_assistant/instructions/: visualizer_instruction.txt
2youtube_short_loop_agent/youtube_short_loop_agent/: agent.py  main.py  pyproject.toml
3programatic_Adk_Agent/programatic_Adk_Agent/: agent.py  main.py  pyproject.toml  util.py
4Ecommerce-shop-assistant/: shop_agent.ipynb
5Sustainable_energy_researcher/: requirements.txt  sustainable_agent.py
6Website_Info_agent_with_MCP/website_info_agent_adk_mcp/: agent.py  pyproject.toml  requirements.txt  website_mcp_server.py
temp/: agent.py  main.py  pyproject.toml
